# oasis-agent

./: .gitignore  .gitreview  CONTRIBUTING.rst  README.rst  requirements.txt  setup.cfg  setup.py
contrib/elements/oasis-agent-debian/: element-deps
contrib/elements/oasis-agent-debian/install.d/: 11-oasis-agent-debian
contrib/elements/oasis-agent/install.d/: 74-oasis-agent  oasis-agent.conf  oasis-agent.service
doc/source/: conf.py  index.rst  template.rst
etc/oasisagent/: README-oasisagent.conf.txt
etc/oslo-config-generator/: oasisagent.conf
oasisagent/: app.py  i18n.py  version.py
oasisagent/agent/: config.py
oasisagent/cmd/: run.py
oasisagent/common/: config.py  exception.py  flask_task.py  rpc.py  rpc_service.py  script_builder.py  service.py  short_id.py  utils.py
oasisagent/handlers/: endpoint.py  function.py
oasisagent/objects/: __init__.py  base.py
